[gd_scene load_steps=17 format=3 uid="uid://3mgpxpqemnqu"]

[ext_resource type="Theme" uid="uid://bex8yexjg5o6t" path="res://main/asset/theme/main_theme.tres" id="1_5072q"]
[ext_resource type="Script" path="res://main/title/title_interface.gd" id="2_qge47"]
[ext_resource type="Texture2D" uid="uid://cinthqmvhgg7c" path="res://main/title/title.png" id="3_62h4c"]
[ext_resource type="Texture2D" uid="uid://bsk63unkr3ffi" path="res://main/asset/text_box/flicker_triangle.png" id="4_dh6xu"]

[sub_resource type="Animation" id="Animation_icxjn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ehsfd"]
resource_name = "flicker"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q7d3c"]
_data = {
"RESET": SubResource("Animation_icxjn"),
"flicker": SubResource("Animation_ehsfd")
}

[sub_resource type="Animation" id="Animation_jhewc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_67f8l"]
resource_name = "flicker"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w3rir"]
_data = {
"RESET": SubResource("Animation_jhewc"),
"flicker": SubResource("Animation_67f8l")
}

[sub_resource type="Animation" id="Animation_1jpk5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2633l"]
resource_name = "flicker"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_32a6b"]
_data = {
"RESET": SubResource("Animation_1jpk5"),
"flicker": SubResource("Animation_2633l")
}

[sub_resource type="Animation" id="Animation_lwav6"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(64, 32), Vector2(0, 32)]
}

[sub_resource type="Animation" id="Animation_asr3s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(64, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ugqnu"]
_data = {
"RESET": SubResource("Animation_asr3s"),
"run": SubResource("Animation_lwav6")
}

[node name="TitleInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5072q")
script = ExtResource("2_qge47")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(64, 32)
texture = ExtResource("3_62h4c")
region_enabled = true
region_rect = Rect2(0, 0, 128, 64)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 45.0
offset_right = 48.0
offset_bottom = 57.0
theme_override_constants/separation = 1

[node name="IconContainer" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="1" type="TextureRect" parent="HBoxContainer/IconContainer"]
layout_mode = 2
texture = ExtResource("4_dh6xu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/IconContainer/1"]
libraries = {
"": SubResource("AnimationLibrary_q7d3c")
}

[node name="2" type="TextureRect" parent="HBoxContainer/IconContainer"]
layout_mode = 2
texture = ExtResource("4_dh6xu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/IconContainer/2"]
libraries = {
"": SubResource("AnimationLibrary_w3rir")
}

[node name="LabelContainer" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Play" type="Label" parent="HBoxContainer/LabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "play"

[node name="Credits" type="Label" parent="HBoxContainer/LabelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Credits
"

[node name="CreditScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="CreditScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditScreen/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CreditScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="CreatedBy" type="Label" parent="CreditScreen/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.14902, 0.309804, 0.431373, 1)
text = "created by"
horizontal_alignment = 1

[node name="EricAlfaro" type="Label" parent="CreditScreen/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "kiwijuice56"
horizontal_alignment = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="CreditScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="CreatedBy" type="Label" parent="CreditScreen/MarginContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.14902, 0.309804, 0.431373, 1)
text = "thumbnail art"
horizontal_alignment = 1

[node name="EricAlfaro" type="Label" parent="CreditScreen/MarginContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "paranormilia"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CreditScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="MusicBy" type="Label" parent="CreditScreen/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.14902, 0.309804, 0.431373, 1)
text = "music"
horizontal_alignment = 1

[node name="Kevin" type="Label" parent="CreditScreen/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "incompetech.com"
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="CreditScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="SfxBy" type="Label" parent="CreditScreen/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.14902, 0.309804, 0.431373, 1)
text = "sfx"
horizontal_alignment = 1

[node name="FreeSound" type="Label" parent="CreditScreen/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "freesound.org"
horizontal_alignment = 1

[node name="FreeSound2" type="Label" parent="CreditScreen/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "zapsplat.com"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CreditScreen/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="CreditScreen/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("4_dh6xu")

[node name="Back" type="Label" parent="CreditScreen/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CreditScreen/MarginContainer/HBoxContainer/Back"]
root_node = NodePath("../..")
autoplay = "flicker"
libraries = {
"": SubResource("AnimationLibrary_32a6b")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "run"
libraries = {
"": SubResource("AnimationLibrary_ugqnu")
}

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
offset_right = 52.0
offset_bottom = 50.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
text = "woof
wizard"
horizontal_alignment = 1
